# ibkr-mcp-server

./: .env.example  .gitignore  .hil  API_FIXES_COMPLETE.md  CHANGELOG.md  IMPLEMENTATION_PROGRESS.md  INTERNATIONAL_TRADING_ANALYSIS.md  LICENSE  PAPER_TEST_CHECKLIST.md  PROJECT_OVERVIEW.md  README.md  STOP_LOSS_ANALYSIS.md  SYMBOL_RESOLUTION_FIX_COMPLETE.md  TECHNICAL_ARCHITECTURE.md  TESTING_STATUS.md  check_bracket_syntax.py  check_order_types.py  debug_test.py  enhanced_market_data.py  enhanced_tools.py  ibkr_mcp_tool_gaps_analysis.md  ibkr_mcp_update_plan.md  ibkr_symbol_resolution_fix.md  investigate_api.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  syntax_check.py  test_advanced_stop_loss.py  test_api_fixes.py  test_comprehensive.py  test_config.py  test_connection.py  test_connection_debug.py  test_connection_direct.py  test_contract_types.py  test_contract_types_simple.py  test_correct_api.py  (+20 more)
.github/workflows/: ci.yml
docs/: API.md  API_QUICK_REFERENCE.md  DEPLOYMENT.md  DOCUMENTATION_UPDATES_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  claude-desktop-integration.md
docs/api/: API_QUICK_REFERENCE.md  tools.md
docs/architecture/: ibkr_client_id_force_guide.md  paper-testing-checklist.md  paper-testing-strategy.md  proven_test_pattern.md  safety-measures.md  system-architecture.md  testing-strategy.md  tool-gaps-analysis.md
docs/examples/: advanced-trading.md  basic-usage.md  integrations.md  troubleshooting.md
docs/guides/: claude-desktop-testing-checklist.md  claude-desktop-user-testing.md  deployment.md  forex.md  international.md  paper-trading.md  quick-start.md  risk-management.md  trading.md
docs/reference/: markets.md
ibkr_mcp_server/: __init__.py  __main__.py  client.py  config.py  enhanced_config.py  enhanced_validators.py  ibkr_mcp_update_plan.md  main.py  safety_framework.py  tools.py  tools_original.py  utils.py
ibkr_mcp_server/data/: __init__.py  exchange_info.py  forex_pairs.py  international_symbols.py
ibkr_mcp_server/documentation/: __init__.py  doc_processor.py
ibkr_mcp_server/trading/: __init__.py  forex.py  international.py  order_management.py  stop_loss.py
scripts/: README.md  commit.bat  diagnose_gateway.py  fix_unicode.py  git-commit.bat  git-commit.ps1  git-commit.py  install_service.py  run_individual_paper_tests.bat  run_multiple_tests.bat  run_single_test.bat  run_test.bat  setup-claude-desktop.bat  setup.bat  setup.sh  subscription_model_example.py  test_cleanup_improved.bat  test_exchange_mappings.py  verify_mappings.py
tests/: __init__.py  conftest.py  test_client.py  test_tools.py
tests/end_user/: ibkr_end_user_testing_scenarios.md
tests/integration/: test_error_handling.py  (+5 more)
(+95 files in other folders)
